# chatbot_second_team

./: README.md  aiml_sample.py  basic_chat.aiml  std-startup.xml
.github/: deploy.yml
backend/: Makefile  pyproject.toml  user_questions.txt
backend/app/: app.py
backend/core/: aiml_sample.py  basic_chat.aiml  basic_chat_developed.aiml  constants.py  load.py  proc.py  processing.py  std-startup.xml
backend/docs/: docs.html
bot/: constants.py  load.py  messages.py  models.py  views.py
bot/backend_aiml/: aiml_sample.py  basic_chat_developed.aiml  std-startup.xml
bot/migrations/: 0001_initial.py
chatbot/: settings.py  urls.py
frontend/: Makefile  index.html  package-lock.json  package.json
frontend/public/files/: Акт возврата к Договору найма жилого помещения.docx  Акт приёма-передачи к Договору найма жилого помещения.docx  Акт сдачи-приемки услуг.docx  График уборки.docx  Договор возмездного оказания услуг по уборке_на постоянной основе.docx  Договор найма жилого помещения самозанятого.docx  Договор подряда на выполнение ремонтных работ.docx  Часто задаваемые вопросы.docx
frontend/public/files/Найм/: Акт возврата к Договору найма жилого помещения.docx  Акт приёма-передачи к Договору найма жилого помещения.docx  Договор найма жилого помещения самозанятого.docx
frontend/public/files/Ремонт/: Акт сдачи-приемки.docx  Договор подряда на выполнение ремонтных работ.docx  Обязательно к ознакомлению.docx
frontend/src/: App.svelte  adaptive.css  app.css  main.ts
templates/: base.html  frontpage.html
(+4 files in other folders)
