[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Nikita Nelson <nikitazharov2@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
aiml = "^0.9.2"
pymorphy2 = "^0.9.1"
pycryptodome = "^3.15.0"
uvicorn = "^0.18.3"
websockets = "^10.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
start="app.app:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
